infra/k8s/application/03-chromadb.yaml
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gangwon-chroma-db
  namespace: hyeonbeen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gangwon-chroma-db
  template:
    metadata:
      labels:
        app: gangwon-chroma-db
    spec:
      containers:
        - name: chroma
          image: chromadb/chroma:latest
          ports:
            - containerPort: 8000
---
#Service
apiVersion: v1
kind: Service
metadata:
  name: gangwon-chroma-db  
  namespace: hyeonbeen
spec:
  selector:
    app: gangwon-chroma-db
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
